--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -32,6 +32,13 @@
             android:title="Orders" />
 
         <item
+            android:id="@+id/nav_shipper"
+            android:icon="@drawable/ic_local_shipping_black_24dp"
+            android:iconTint="@android:color/white"
+            android:title="Shippers Management" />
+
+
+        <item
             android:id="@+id/nav_sign_out"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
             android:iconTint="@android:color/white"
