--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#004d40</color>
-    <color name="colorPrimaryDark">#00251a</color>
-    <color name="colorAccent">#39796b</color>
+    <color name="colorPrimary">#e6d066</color>
+    <color name="colorPrimaryDark">#d7c441</color>
+    <color name="colorAccent">#5e6279</color>
+    <color name="colorBackground">#f3f4f8</color>
+    <color name="colorButtonText">#343641</color>
+    <color name="searchBackground">#ededed</color>
 
-    <!--Button Sign In-->
     <color name="btnSignUp">#39796b</color>
     <color name="btnSignActive">#A9D440</color>
 
     <color name="overlayBackground">#7f333639</color>
     <color name="overlayActionBar">#0e0d0e</color>
+
+    <color name="bgRowBackground">#FA315b</color>
 </resources>
