--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -57,8 +57,11 @@
                 android:id="@+id/service_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="$100"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="0"
                 android:textSize="20sp" />
 
             <ImageView
