--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -31,13 +31,18 @@
             android:iconTint="@android:color/white"
             android:title="Orders" />
 
-        <item
-            android:id="@+id/nav_sign_out"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"
-            android:iconTint="@android:color/white"
-            android:title="Sign Out" />
-
     </group>
+        <item android:title="Account">
+            <menu>
+                <item
+                    android:id="@+id/nav_sign_out"
+                    android:icon="@drawable/ic_exit_to_app_black_24dp"
+                    android:iconTint="@android:color/white"
+                    android:title="Sign Out" />
+            </menu>
+        </item>
+
+
 
 
 </menu>
