--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -10,8 +10,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:clickable="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/CircleImageViewShopImage"
