--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#E6D066</color>
-    <color name="colorPrimaryDark">#d7c441</color>
+    <color name="colorPrimaryDark">#D7C441</color>
     <color name="colorAccent">#5e6279</color>
     <color name="colorBackground">#f3f4f8</color>
     <color name="colorButtonText">#343641</color>
