--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -73,6 +73,8 @@
                         android:ems="10"
                         android:hint="Shop Name"
                         android:inputType="textPersonName|textCapWords"
+                        android:textColor="@color/primary_text"
+                        android:textColorHint="@color/secondary_text"
                         android:singleLine="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -88,6 +90,8 @@
                         android:ems="10"
                         android:hint="Shop Address"
                         android:inputType="textPersonName|textCapWords"
+                        android:textColor="@color/primary_text"
+                        android:textColorHint="@color/secondary_text"
                         android:singleLine="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -104,6 +108,8 @@
                         android:ems="10"
                         android:hint="Shop Phone"
                         android:inputType="phone"
+                        android:textColor="@color/primary_text"
+                        android:textColorHint="@color/secondary_text"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
