--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -29,7 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:backgroundTint="@android:color/white"
+        android:backgroundTint="@color/colorAccent"
+        app:pressedTranslationZ="12dp"
         app:srcCompat="@drawable/ic_playlist_add_black_24dp" />
 
 </android.support.design.widget.CoordinatorLayout>
