--- a/app/src/main/res/layout/service_item.xml
+++ b/app/src/main/res/layout/service_item.xml
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
                 android:text="Name of Service"
+                android:textColor="@color/primary_text"
                 android:textSize="20sp" />
 
             <ImageView
@@ -62,6 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0"
+                android:textColor="@color/primary_text"
                 android:textSize="20sp" />
 
 
