--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E6D066</color>
-    <color name="colorPrimaryDark">#D7C441</color>
-    <color name="colorAccent">#5e6279</color>
+    <color name="colorPrimary">#FFC107</color>
+    <color name="colorPrimaryDark">#FFA000</color>
+    <color name="colorAccent">#4caf50</color>
     <color name="colorBackground">#f3f4f8</color>
     <color name="colorButtonText">#343641</color>
     <color name="searchBackground">#ededed</color>
     <color name="collapseColorScrim">#0e0d0e</color>
+    <color name="primary_light">#FFECB3</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="icons">#212121</color>
+    c
 
     <color name="btnSignUp">#39796b</color>
     <color name="btnSignActive">#A9D440</color>
