--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -104,32 +104,34 @@
 
             <Button
                 android:id="@+id/buttonSave"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Save"
-                android:textSize="@dimen/button_text_size"
-                android:textAllCaps="false"
+                android:layout_marginBottom="8dp"
                 android:background="@color/colorAccent"
+                android:text="Save"
+                android:textColor="@android:color/white"
+                android:textAllCaps="false"
+                android:textSize="@dimen/button_text_size"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/edtDesc" />
 
             <Button
                 android:id="@+id/buttonCancel"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
-                android:textAllCaps="false"
+                android:layout_marginBottom="8dp"
+                android:background="@color/colorView"
                 android:text="Cancel"
+                android:textAllCaps="false"
                 android:textSize="@dimen/button_text_size"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/buttonSave" />
+                app:layout_constraintTop_toBottomOf="@+id/edtDesc" />
 
 
         </android.support.constraint.ConstraintLayout>
